--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>TiksiHehku</title></head><body><h1>Tervetuloa TiksiHehkuun (Web)</h1></body></html>
+<!DOCTYPE html><html><body><h1>Tervetuloa TiksiHehkuun (Web)</h1></body></html>
