--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,8 @@
 <html lang="fi">
   <head>
     <meta charset="UTF-8" />
-    <title>Tervetuloa TiksiHehkuun</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1.00001,viewport-fit=cover" />
+    <title>TiksiHehku</title>
   </head>
   <body>
     <div id="root"></div>
