--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1.00001,viewport-fit=cover">
-
-    <title>Tervetuloa TiksiHehkuun!</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="bundle.js"></script>
-  </body>
+<html lang="fi">
+<head>
+  <meta charset="UTF-8" />
+  <title>Tervetuloa TiksiHehkuun</title>
+</head>
+<body style="text-align:center; margin-top:100px; font-family:sans-serif;">
+  <h1>🔥 TiksiHehku</h1>
+  <h2>Missä ideat virtaavat – ilman turhaa sensuuria</h2>
+  <p>Tervetuloa! Kirjaudu sisään tai selaa sisältöä vasemmasta sivupalkista.</p>
+</body>
 </html>
